--- a/main.css
+++ b/main.css
@@ -53,13 +53,14 @@ p {
     background-color: #ddd;
     border-radius: 10px;
     overflow: hidden;
+    transition: all 0.5s ease-in-out;
 }
 
 #progress-bar {
     height: 100%;
     width: 0%;
     background-color: #007bff;
-    transition: width 0.5s ease-in-out;
+    transition: width 0.8s ease-in-out;
 }
 
 #clear-selection {
